# cipherx-bot

./: .env.example  README.md  pyproject.toml
src/cryptobot/: __main__.py  bot.py  config.py  crypto.py  data_store.py  donate.py  keyboards.py  utils.py
tests/: test_crypto.py
